--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -195,6 +195,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="profile-recommend">
                     <h2>Recommendations For You</h2>
+                    <div class="profile-favorite-content" >
+                        {% if movie_recommend_list %}
+                            {% for recommend_movie in movie_recommend_list %}
+                            <div class="favorite-list-single">
+                                    <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{recommend_movie.poster_url}}" alt={{ recommend_movie.movie_title }} width="200px">
+                                <a href="/moviehub/movie/{{ recommend_movie.movie_id }}"><p>{{ recommend_movie.movie_title }}</p></a>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <img src="../../static/images/png/no-history.png" style="margin-left: 30px">
+                        {% endif %}
+                    </div>
                 </div>
         </div>
 
