--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1426,6 +1426,9 @@ font-weight: 700;
     transform: translate3d(0, 1px, -2px);
 	width: 100%;
 	height: 500px;
+	padding: 20px;
+	overflow-y: scroll;
+
 }
 .single-recommend{
 	width: 30%;
@@ -2084,3 +2087,131 @@ input[type="radio"] {
 	-webkit-box-orient: vertical;
 }
 
+.star{
+    display: block;
+    position: relative;
+    width: 150px;
+    height: 60px;
+    padding: 0;
+    border: none;
+	margin-top: 20px;
+}
+
+.star input{
+    position: absolute;
+    margin-right: -100%;
+    opacity: 0;
+}
+
+.star label{
+    position: relative;
+    display: inline-block;
+    float: right;
+    width: 30px;
+    height: 30px;
+    color: transparent;
+    background-image: url("../images/icons/star.png");
+    background-repeat: no-repeat;
+}
+
+.star input:focus + label{
+    outline: none;
+}
+
+.star input:checked~label,
+.star input:focus~label,
+.star input:hover~label{
+    background-position: 0 -30px;
+}
+
+.star > label:before{
+    display: none;
+    position: absolute;
+    content: " ";
+    width: 30px;
+    height: 30px;
+    background-image: url("../images/icons/star.png");
+    background-repeat: no-repeat;
+    bottom: 0;
+}
+
+.star > input:checked + label:before{
+    display: block;
+    animation-name: rotateStar;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes rotateStar{
+    0%{
+        transform: scale(1) rotate(0);
+    }
+
+    95%{
+        transform: scale(4) rotate(90deg);
+        opacity: 0;
+    }
+
+    100%{
+        transform: scale(1) rotate(0);
+        opacity: 0;
+    }
+}
+
+.review-content {
+	display: inline-block;
+	width: 100%;
+	height: 150px;
+}
+
+.review-star {
+	width: 70%;
+}
+
+.display-star {
+	display: inline;
+	width: 70%;
+	height: inherit;
+	background: red;
+}
+
+.display-star label{
+    position: relative;
+    display: inline;
+    float: left;
+    width: 30px;
+    height: 30px;
+    color: transparent;
+    background-image: url("../images/icons/star.png");
+    background-repeat: no-repeat;
+	display: inline;
+}
+
+#light label {
+	background-position: 0 -30px;
+}
+
+.single-review-left {
+	width: 96px;
+	height: 96px;
+	border-radius: 50%;
+	float: left;
+	overflow: hidden;
+	margin-right: 20px;
+}
+
+.single-review-left img {
+	width: 96px;
+	height: 96px;
+}
+
+.single-review-right {
+}
+
+.single-review-right p {
+	margin: 10px 0;
+}
+
+.single-review-right h3 {
+	padding-top: 0;
+}
