--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -140,13 +140,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="news">
 			<div class="col-md-6 news-left-grid">
-				<h3>Welcome.</h3>
+				<h3 style="margin-left: 0">Welcome.</h3>
 				<h2>Millions of movies, TV shows and people to discover.</h2>
 				<h4>Explore now.</h4>
                 <img src="../../static/images/png/cute-ghost.png" style="max-height: 200px">
 			</div>
 			<div class="col-md-6 news-right-grid">
-				<h3>News</h3>
+				<h3 style="margin-left: 0">News</h3>
 				<div class="news-grid">
 					<h5>The 5 Most Anticipated Movies of May 2021</h5>
 					<label>May 5, 2021</label>
