--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -93,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!---settings-->
         <div class="content" style="width: 100%; display: inline-block; min-height: 500px;">
             <div>
-                <img src="../../static/images/icons/search.png" style="width: 48px; display: inline; margin-left: 20px; margin-bottom: 20px"><h1 style="display: inline">Search</h1>
+                <img src="../../static/images/icons/search.png" style="width: 48px; display: inline; margin-left: 20px; margin-bottom: 20px"><h1 style="display: inline">Search&nbsp;&nbsp;"{{ search_text }}"</h1>
             </div>
             <h3 style="margin: 20px">Search by name</h3>
             {% if search_by_name_flag %}
